--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             </div>
          </div>
          <div class="row lay-app">
-            <div class="col-md-12 border p-4"><a class="btn btn-collapse btn-primary" data-bs-toggle="collapse" href="#sec-app" role="button" aria-expanded="false" aria-controls="collapseExample">
+            <div class="col-md-12 border p-4"><a class="btn btn-collapse btn-primary" data-bs-toggle="collapse" href="#sec-app" role="button" aria-expanded="true" aria-controls="Open the apparatus">
                   Apparatus
-                  </a><div class="collapse mt-4 row" id="sec-app">
-                  <div data-loc="1" data-type="app"><span data-type="loc"><sup>1</sup></span> <span data-type="lem" data-wit="#NK28 #NKO77 #P">om.</span><span data-type="divider"> ] </span><span> </span><span>NK28 </span><span>NKO77 </span><span>P </span><span class="ms-3" data-type="rdg" data-wit="#PT75"><span> </span><span>PT75 </span><span> inserts: </span><span data-type="rdg">śivam astu sarvajagatāṃ --- parahitaniratā bhavantu bhūtaguṇāḥ | doṣāḥ prayāntu śāntiṃ
+                  </a><div class="collapse mt-4 row show" id="sec-app">
+                  <div data-loc="1" data-type="app"><span data-type="loc"><sup>1</sup></span> <span data-type="lem" data-wit="#NK28 #NKO77 #P">om.</span><span data-type="divider"> ] </span><span> </span><span>NK28 </span><span>NKO77 </span><span>P </span><span class="ms-3" data-type="rdg" data-wit="#PT75"><span> </span><span>PT75 </span><span data-type="om-ins"> inserts: </span><span data-type="rdg">śivam astu sarvajagatāṃ --- parahitaniratā bhavantu bhūtaguṇāḥ | doṣāḥ prayāntu śāntiṃ
                            -- sarvatra su-khībhavantu sakalalokāḥ ||    </span></span></div>
                   <div data-loc="1a" data-type="app"><span data-type="loc"><sup>1a</sup></span> <span data-type="lem" data-wit="#NK82 #NO15 #E">
                         °dhāriṇe</span><span data-type="divider"> ] </span><span> </span><span>NK82 </span><span>NO15 </span><span>E </span><span class="ms-3" data-type="rdg" data-wit="#NC45">dhāraṇe<span> </span><span>NC45 </span></span></div>
