--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <span data-type="l" data-n="a">
                            namo ’stu tasmai śakalendu
                            
-                           <span class="term-inline" data-type="lem" data-wit="#NK82 #NO15 #E">dhāriṇe</span> <sup>1a</sup><br></span>
+                           
+                           <span class="term-inline" data-type="lem" data-wit="#NK82 #NO15 #E">dhāriṇe</span><span class="term-inline" data-type="lem" data-wit="#NC45 #NO15 #E">rāgiṇe</span> <sup>1a 1b</sup><br></span>
                         <span data-type="l" data-n="b">
                            phaṇīndraratnadyutikaṇṭharāgiṇe
                             <sup></sup><span data-type="danda"> | </span><br></span>
@@ -106,6 +107,8 @@
                            -- sarvatra su-khībhavantu sakalalokāḥ ||    </span></span></div>
                   <div data-loc="1a" data-type="app"><span data-type="loc"><sup>1a</sup></span> <span data-type="lem" data-wit="#NK82 #NO15 #E">
                         °dhāriṇe</span><span data-type="divider"> ] </span><span> </span><span>NK82 </span><span>NO15 </span><span>E </span><span class="ms-3" data-type="rdg" data-wit="#NC45">dhāraṇe<span> </span><span>NC45 </span></span></div>
+                  <div data-loc="1b" data-type="app"><span data-type="loc"><sup>1b</sup></span> <span data-type="lem" data-wit="#NC45 #NO15 #E">
+                        °rāgiṇe</span><span data-type="divider"> ] </span><span> </span><span>NC45 </span><span>NO15 </span><span>E </span><span class="ms-3" data-type="rdg" data-wit="#NK82">dhāriṇeṃ<span> </span><span>NK82 </span></span></div>
                   <div data-loc="2c" data-type="app"><span data-type="loc"><sup>2c</sup></span> <span data-type="lem" data-wit="#NK28 #P">sūdanaṃ</span><span data-type="divider"> ] </span><span> </span><span>NK28 </span><span>P </span><span class="ms-3" data-type="rdg" data-wit="#NC45 #NK82 #NKo77 #E">skandanaṃ<span> </span><span>NC45 </span><span>NK82 </span><span>NKo77 </span><span>E </span></span><span class="ms-3" data-type="rdg" data-wit="#NO15">skadanaṃ<span> </span><span>NO15 </span></span></div>
                </div>
             </div>
