--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                     manuṣyaloke sambhūtāḥ
                                     </span><span data-type="l" data-n="d">
                                     svarloke gāminaḥ param
-                                     <span data-type="double-danda"> || <span>1.187.1</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-author">Unknown</span>, <span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.1</span></span></div>
+                                     <span data-type="double-danda"> || <span>1.187.1</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.1</span></span></div>
                      </div>
                      <div class="collapse pt-2" id="app-inline-9">
                         <div class="app-nt-comp border card card-body">
@@ -371,7 +371,7 @@
                                     jñānayajñaś ca pañcaite
                                     </span><span data-type="l" data-n="d">
                                     mahāyajñāḥ prakīrtitāḥ
-                                     <span data-type="double-danda"> || <span>1.187.2</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-author">Unknown</span>, <span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.2</span></span></div>
+                                     <span data-type="double-danda"> || <span>1.187.2</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.2</span></span></div>
                      </div>
                      <div class="collapse pt-2" id="app-inline-10">
                         <div class="app-nt-comp border card card-body">
@@ -414,7 +414,7 @@
                                     etad yajñaphalānāṃ ca
                                     </span><span data-type="l" data-n="d">
                                     kiṃ kalaṃ kā yatir bhavet
-                                     <span data-type="double-danda"> || <span>1.187.3</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-author">Unknown</span>, <span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.3</span></span></div>
+                                     <span data-type="double-danda"> || <span>1.187.3</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.3</span></span></div>
                      </div>
                      <div class="collapse pt-2" id="app-inline-11">
                         <div class="app-nt-comp border card card-body">
