--- a/index.html
+++ b/index.html
@@ -319,15 +319,19 @@
                         <span class="btn-collapse" data-bs-toggle="collapse" href="#bhap-1-187-1" aria-expanded="false" aria-controls="#bhap-1-187-1" data-target="prl"> par.</span><span class="btn-collapse" data-bs-toggle="collapse" href="#app-inline-9" aria-expanded="false" aria-controls="app-inline-9" data-target="app"> app.</span></div>
                      <div class="app-click collapse pt-2" id="bhap-1-187-1" data-type="parallel">
                         <div class="app-nt-comp border card card-body card-prl">
-                           <div data-type="parallel"><span data-type="prl-quote"><span data-type="l" data-n="a">
-                                    kāni puṇyāni kṛtveha
-                                    </span><span data-type="l" data-n="b"> 
-                                    svargaṃ gacchanti mānavāḥ
-                                    <span data-type="single-danda"> | </span><br></span><span data-type="l" data-n="c">
-                                    manuṣyaloke sambhūtāḥ
-                                    </span><span data-type="l" data-n="d">
-                                    svarloke gāminaḥ param
-                                     <span data-type="double-danda"> || <span>1.187.1</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.1</span></span></div>
+                           <div data-source="Bhaviṣyapurāṇa" data-type="parallel">
+                              <div class="py-2" data-excerpt="bhap-1-187-1"><span data-type="prl-quote"><span data-type="l" data-n="a">
+                                       kāni puṇyāni kṛtveha
+                                       </span><span data-type="l" data-n="b"> 
+                                       svargaṃ gacchanti mānavāḥ
+                                       <span data-type="single-danda"> | </span><br></span><span data-type="l" data-n="c">
+                                       manuṣyaloke sambhūtāḥ
+                                       </span><span data-type="l" data-n="d">
+                                       svarloke gāminaḥ param
+                                        <span data-type="double-danda"> || <span>1.187.1</span> || </span></span></span></div>
+                           </div>
+                           <div><a class="prl-bibl" data-source="Bhaviṣyapurāṇa" data-excerpt-ref="bhap-1-187-1">Open the entire parallel</a></div>
+                        </div>
                      </div>
                      <div class="collapse pt-2" id="app-inline-9">
                         <div class="app-nt-comp border card card-body">
@@ -363,15 +367,19 @@
                         <span class="btn-collapse" data-bs-toggle="collapse" href="#bhap-1-187-2" aria-expanded="false" aria-controls="#bhap-1-187-2" data-target="prl"> par.</span><span class="btn-collapse" data-bs-toggle="collapse" href="#app-inline-10" aria-expanded="false" aria-controls="app-inline-10" data-target="app"> app.</span></div>
                      <div class="app-click collapse pt-2" id="bhap-1-187-2" data-type="parallel">
                         <div class="app-nt-comp border card card-body card-prl">
-                           <div data-type="parallel"><span data-type="prl-quote"><span data-type="l" data-n="a">
-                                    karmayajñas tapoyajñaḥ
-                                    </span><span data-type="l" data-n="b"> 
-                                    svādhyāyo dhyānanirmitaḥ
-                                    <span data-type="single-danda"> | </span><br></span><span data-type="l" data-n="c">
-                                    jñānayajñaś ca pañcaite
-                                    </span><span data-type="l" data-n="d">
-                                    mahāyajñāḥ prakīrtitāḥ
-                                     <span data-type="double-danda"> || <span>1.187.2</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.2</span></span></div>
+                           <div data-source="Bhaviṣyapurāṇa" data-type="parallel">
+                              <div class="py-2" data-excerpt="bhap-1-187-2"><span data-type="prl-quote"><span data-type="l" data-n="a">
+                                       karmayajñas tapoyajñaḥ
+                                       </span><span data-type="l" data-n="b"> 
+                                       svādhyāyo dhyānanirmitaḥ
+                                       <span data-type="single-danda"> | </span><br></span><span data-type="l" data-n="c">
+                                       jñānayajñaś ca pañcaite
+                                       </span><span data-type="l" data-n="d">
+                                       mahāyajñāḥ prakīrtitāḥ
+                                        <span data-type="double-danda"> || <span>1.187.2</span> || </span></span></span></div>
+                           </div>
+                           <div><a class="prl-bibl" data-source="Bhaviṣyapurāṇa" data-excerpt-ref="bhap-1-187-2">Open the entire parallel</a></div>
+                        </div>
                      </div>
                      <div class="collapse pt-2" id="app-inline-10">
                         <div class="app-nt-comp border card card-body">
@@ -406,15 +414,19 @@
                         <span class="btn-collapse" data-bs-toggle="collapse" href="#bhap-1-187-3" aria-expanded="false" aria-controls="#bhap-1-187-3" data-target="prl"> par.</span><span class="btn-collapse" data-bs-toggle="collapse" href="#app-inline-11" aria-expanded="false" aria-controls="app-inline-11" data-target="app"> app.</span></div>
                      <div class="app-click collapse pt-2" id="bhap-1-187-3" data-type="parallel">
                         <div class="app-nt-comp border card card-body card-prl">
-                           <div data-type="parallel"><span data-type="prl-quote"><span data-type="l" data-n="a">
-                                    eteṣām eva yajñānām
-                                    </span><span data-type="l" data-n="b"> 
-                                    uttamaḥ katamaḥ smṛtaḥ
-                                    <span data-type="single-danda"> | </span><br></span><span data-type="l" data-n="c">
-                                    etad yajñaphalānāṃ ca
-                                    </span><span data-type="l" data-n="d">
-                                    kiṃ kalaṃ kā yatir bhavet
-                                     <span data-type="double-danda"> || <span>1.187.3</span> || </span></span></span></div><span class="prl-bibl"><span data-type="prl-title">Bhaviṣyapurāṇa</span>, <span data-type="prl-citedRange">1.187.3</span></span></div>
+                           <div data-source="Bhaviṣyapurāṇa" data-type="parallel">
+                              <div class="py-2" data-excerpt="bhap-1-187-3"><span data-type="prl-quote"><span data-type="l" data-n="a">
+                                       eteṣām eva yajñānām
+                                       </span><span data-type="l" data-n="b"> 
+                                       uttamaḥ katamaḥ smṛtaḥ
+                                       <span data-type="single-danda"> | </span><br></span><span data-type="l" data-n="c">
+                                       etad yajñaphalānāṃ ca
+                                       </span><span data-type="l" data-n="d">
+                                       kiṃ kalaṃ kā yatir bhavet
+                                        <span data-type="double-danda"> || <span>1.187.3</span> || </span></span></span></div>
+                           </div>
+                           <div><a class="prl-bibl" data-source="Bhaviṣyapurāṇa" data-excerpt-ref="bhap-1-187-3">Open the entire parallel</a></div>
+                        </div>
                      </div>
                      <div class="collapse pt-2" id="app-inline-11">
                         <div class="app-nt-comp border card card-body">
@@ -731,12 +743,20 @@
                   
                   </div>
             </div>
+            <div class="border d-none sec" id="full-prl">
+               <div class="icon-cls"><i class="fa-solid fa-xmark"></i></div>
+               <div class="icon-opn"><i class="fa-solid fa-expand"></i></div>
+               <div class="p-3 scrollbar">
+                  <h5 class="introduction-base title-full-prl"></h5>
+                  <div class="lay-full-prl"></div>
+               </div>
+            </div>
             <div class="border col-md-5 sec" id="trl">
                <div class="icon-cls"><i class="fa-solid fa-xmark"></i></div>
                <div class="icon-opn"><i class="fa-solid fa-expand"></i></div>
                <div class="row p-3 lay-trs scrollbar">
                   <div class="row">
-                     parallels
+                     translation
                      </div>
                </div>
             </div>
