--- a/index.html
+++ b/index.html
@@ -933,11 +933,11 @@
                <div class="icon-cls"><i class="fa-solid fa-xmark"></i></div>
                <div class="icon-opn"><i class="fa-solid fa-expand"></i></div>
                <div class="lay-prl scrollbar">
-                  <div class="prl-target" ref="#bhap-1-187-1" data-type="parallel"><span data-type="prl-n">1.<span>9</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.1</span></div>
-                  <div class="prl-target" ref="#bhap-1-187-2" data-type="parallel"><span data-type="prl-n">1.<span>10</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.2</span></div>
-                  <div class="prl-target" ref="#bhap-1-187-3" data-type="parallel"><span data-type="prl-n">1.<span>11</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.3</span></div>
-                  <div class="prl-target" ref="#bhap-1-187-9" data-type="parallel"><span data-type="prl-n">1.<span>17</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.9</span></div>
-                  <div class="prl-target" ref="#devi-127-12" data-type="parallel"><span data-type="prl-n">1.<span>17</span></span> <span> = </span><span data-type="prl-title">DeP</span><br><span data-type="prl-locus">127.12</span></div>
+                  <div class="prl-target" ref="#bhap-1-187-1" data-type="parallel" data-source="Bhaviṣyapurāṇa"><span data-type="prl-n">1.<span>9</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.1</span></div>
+                  <div class="prl-target" ref="#bhap-1-187-2" data-type="parallel" data-source="Bhaviṣyapurāṇa"><span data-type="prl-n">1.<span>10</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.2</span></div>
+                  <div class="prl-target" ref="#bhap-1-187-3" data-type="parallel" data-source="Bhaviṣyapurāṇa"><span data-type="prl-n">1.<span>11</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.3</span></div>
+                  <div class="prl-target" ref="#bhap-1-187-9" data-type="parallel" data-source="Bhaviṣyapurāṇa"><span data-type="prl-n">1.<span>17</span></span> <span> = </span><span data-type="prl-title">BhaP</span><br><span data-type="prl-locus">1.187.9</span></div>
+                  <div class="prl-target" ref="#devi-127-12" data-type="parallel" data-source="Devīpurāṇa"><span data-type="prl-n">1.<span>17</span></span> <span> = </span><span data-type="prl-title">DeP</span><br><span data-type="prl-locus">127.12</span></div>
                </div>
             </div>
          </div>
