--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </span></span></h1>
             </div>
          </div>
-         <div class="row lay-1">
+         <div class="row">
             <div class="border col-md-6 sec" id="txt">
                <div class="icon-cls"><i class="fa-solid fa-xmark"></i></div>
                <div class="icon-opn"><i class="fa-solid fa-expand"></i></div>
